MainActivity and completed todo show showing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".CompletedTodoActivity"></activity>
+        <activity android:name=".CompletedTodoActivity" />
     </application>
 
 </manifest>
